Work-in-progress on walk animation.

--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Arena.Designer.cs">
       <DependentUpon>Arena.cs</DependentUpon>
     </Compile>
+    <Compile Include="Critter.cs" />
+    <Compile Include="CritterBody.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Arena.resx">
