--- a/SCG.TurboSprite/SCG.TurboSprite.csproj
+++ b/SCG.TurboSprite/SCG.TurboSprite.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>GamePieceBitmapFactory.cs</DependentUpon>
     </Compile>
     <Compile Include="ParticleExplosionSprite.cs" />
+    <Compile Include="PolygonSpriteAnimated.cs" />
     <Compile Include="PolygonSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShockWaveSprite.cs" />
