Refactoring, reformatting, and clean up comments.

--- a/SCG.TurboSprite/SCG.TurboSprite.csproj
+++ b/SCG.TurboSprite/SCG.TurboSprite.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="AnimatedBitmapSprite.cs" />
     <Compile Include="BitmapSprite.cs" />
+    <Compile Include="DestinationMover.cs" />
     <Compile Include="GamePieceBitmapFactory.cs">
       <SubType>Component</SubType>
     </Compile>
