--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Critter.cs" />
     <Compile Include="CritterBody.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Arena.resx">
