--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NAudio, Version=1.8.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NAudio.1.8.5\lib\net35\NAudio.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,7 +44,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arena.cs">
@@ -95,6 +90,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NAudio.Audio\NAudio.FireAndForget.csproj">
+      <Project>{6e4cd41e-fd49-4b42-aef8-10eaa409f749}</Project>
+      <Name>NAudio.FireAndForget</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SCG.TurboSprite\SCG.TurboSprite.csproj">
       <Project>{4914C667-93CA-49E2-9340-F4C74889FA67}</Project>
       <Name>SCG.TurboSprite</Name>
