--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arena.cs">
+    <Compile Include="Critterworld.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Arena.Designer.cs">
-      <DependentUpon>Arena.cs</DependentUpon>
+    <Compile Include="Critterworld.Designer.cs">
+      <DependentUpon>Critterworld.cs</DependentUpon>
     </Compile>
     <Compile Include="Sound.cs" />
     <Compile Include="Things\Critter.cs" />
@@ -62,8 +62,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Things\Food.cs" />
     <Compile Include="Things\Terrain.cs" />
-    <EmbeddedResource Include="Arena.resx">
+    <Compile Include="Arena.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Arena.Designer.cs">
       <DependentUpon>Arena.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Critterworld.resx">
+      <DependentUpon>Critterworld.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,6 +81,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Arena.resx">
+      <DependentUpon>Arena.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
