Improved attract mode; sprite restarts moving.

--- a/SCG.TurboSprite/SCG.TurboSprite.csproj
+++ b/SCG.TurboSprite/SCG.TurboSprite.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SpriteMover\Route.cs" />
     <Compile Include="SpriteMover\TextTwitcher.cs" />
     <Compile Include="Sprite\AnimatedBitmapSprite.cs" />
     <Compile Include="Sprite\BitmapSprite.cs" />
