--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Arena.Designer.cs">
       <DependentUpon>Arena.cs</DependentUpon>
     </Compile>
+    <Compile Include="Version.cs" />
     <EmbeddedResource Include="Critterworld.resx">
       <DependentUpon>Critterworld.cs</DependentUpon>
     </EmbeddedResource>
