--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Arena.Designer.cs">
       <DependentUpon>Arena.cs</DependentUpon>
     </Compile>
+    <Compile Include="CritterScorePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CritterScorePanel.Designer.cs">
+      <DependentUpon>CritterScorePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Version.cs" />
     <EmbeddedResource Include="Critterworld.resx">
       <DependentUpon>Critterworld.cs</DependentUpon>
@@ -86,6 +92,9 @@
     </Compile>
     <EmbeddedResource Include="Arena.resx">
       <DependentUpon>Arena.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CritterScorePanel.resx">
+      <DependentUpon>CritterScorePanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
