--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -47,11 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Competition.cs" />
+    <Compile Include="CritterScorePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CritterScorePanel.Designer.cs">
+      <DependentUpon>CritterScorePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Critterworld.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Critterworld.Designer.cs">
       <DependentUpon>Critterworld.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Sound.cs" />
     <Compile Include="Things\Critter.cs" />
@@ -70,31 +81,20 @@
     <Compile Include="Arena.Designer.cs">
       <DependentUpon>Arena.cs</DependentUpon>
     </Compile>
-    <Compile Include="CritterScorePanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="CritterScorePanel.Designer.cs">
-      <DependentUpon>CritterScorePanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="Version.cs" />
+    <EmbeddedResource Include="CritterScorePanel.resx">
+      <DependentUpon>CritterScorePanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Critterworld.resx">
       <DependentUpon>Critterworld.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="Arena.resx">
       <DependentUpon>Arena.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CritterScorePanel.resx">
-      <DependentUpon>CritterScorePanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -128,12 +128,22 @@
     <Content Include="Resources\Images\bomb.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\Images\dead_16.png" />
+    <Content Include="Resources\Images\dead_32.png" />
+    <Content Include="Resources\Images\energy_16.png" />
+    <Content Include="Resources\Images\energy_32.png" />
+    <Content Include="Resources\Images\fail_16.png" />
+    <Content Include="Resources\Images\fail_32.png" />
+    <Content Include="Resources\Images\finish_flag_16.png" />
+    <Content Include="Resources\Images\finish_flag_32.png" />
     <Content Include="Resources\Images\gift.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Images\Goal.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\Images\health32.png" />
+    <Content Include="Resources\Images\health_16.png" />
     <Content Include="Resources\Images\Kiwi-Fruit.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -165,9 +175,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\TerrainMasks\Background06.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Images\WinnerCritter.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Sounds\Arc.wav">
