--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Things\Food.cs" />
+    <Compile Include="IScoreDisplay.cs" />
     <Compile Include="Things\Terrain.cs" />
     <Compile Include="Arena.cs">
       <SubType>UserControl</SubType>
