--- a/CritterWorld/CritterWorld.csproj
+++ b/CritterWorld/CritterWorld.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>Arena.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Critter.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
