--- a/DemonstrationCritters/DemonstrationCritters.csproj
+++ b/DemonstrationCritters/DemonstrationCritters.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Chaser.cs" />
     <Compile Include="Wanderer.cs" />
   </ItemGroup>
   <ItemGroup>
